[gd_scene load_steps=2 format=3 uid="uid://cq3i7td46je11"]

[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_end_point.gd" id="1_qe5me"]

[node name="GEndPoint" type="Node2D"]
script = ExtResource("1_qe5me")

[node name="ControlEnd" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 1

[connection signal="gui_input" from="ControlEnd" to="." method="_on_control_end_gui_input"]
[connection signal="mouse_entered" from="ControlEnd" to="." method="_on_control_end_mouse_entered"]
